<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragment.CashTransactions">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_opencash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_purchaseret"
            android:text="@string/opening"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_cashbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_opencash"
            android:text="@string/withdrawal_deposit"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_cashpurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_purchase"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_salesret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_cashpurchase"
            android:text="@string/sales_returns"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_purchaseret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_salesret"
            android:text="@string/purchase_returns"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_cashbox"
            android:text="@string/expense"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_dayendcash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_expense"
            android:text="@string/dayendcash"
            android:textAllCaps="false" />


    </RelativeLayout>

</FrameLayout>