<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragment.CreditTransactions">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_creditsales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cr_sales"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_creditpurch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_creditsales"
            android:text="@string/credit_purchase"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_receivepay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_creditpurch"
            android:text="@string/rp"
            android:textAllCaps="false" />


    </RelativeLayout>

</FrameLayout>