<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Home_Fragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayend"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="166dp"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="103dp"
                android:layout_height="30dp"
                android:background="@drawable/edittext_background"
                android:gravity="center"
                android:hint="@string/totalcashhint"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="122dp" />

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="168dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opening"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints,SmallSp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints,RtlHardcoded,SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="200dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/receivable"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/payable"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="246dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/cashsales"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/creditsales"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="292dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/purchase"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/expense"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout12"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/totalsales"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    android:textStyle="bold" />


                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/totalcashhint"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/cashBox"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="374dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/newtransaction"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="438dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="278dp"
                tools:layout_editor_absoluteY="374dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/showtransaction"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="278dp"
                tools:layout_editor_absoluteY="438dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>